# icp-forest-xai

./: .gitignore  .pre-commit-config.yaml  00-preprocessing.ipynb  01-explore.ipynb  02-modeling.ipynb  03-analysis.ipynb  HierarchicalTemporaGroupCV.py  HierarchicalTemporalGroupCV.py  Quantile_inversion.ipynb  README.md  TemporalGroupCV.py  Variogram.ipynb  analysis.py  common.py  compute.ipynb  config.py  data.py  explain.py  explore.ipynb  linear-results.ipynb  mlp.ipynb  modeling.ipynb  modeling.py  models.py  pyproject.toml  variogram.ipynb
.github/workflows/: ci.yml  pre-commit.yml
tests/: test_hierarchical_temporal_group_cv.py
