[project]
name = "icp-paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "lightgbm>=4.5.0",
    "matplotlib>=3.10.0",
    "optuna>=4.2.0",
    "polars>=1.21.0",
    "pyarrow>=19.0.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.46.0",
    "torch>=2.6.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
