[project]
name = "icp-paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "cmocean>=4.0.3",
    "contextily>=1.7.0",
    "geopandas>=1.1.3",
    "geopy>=2.4.1",
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "jupyter>=1.1.1",
    "lightgbm>=4.5.0",
    "marimo>=0.11.24",
    "matplotlib>=3.10.0",
    "nbformat>=5.10.4",
    "optuna>=4.2.0",
    "plotly>=6.0.0",
    "polars>=1.21.0",
    "pyarrow>=19.0.0",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.46.0",
    "statsmodels>=0.14.5",
    "torch>=2.6.0",
    "ty>=0.0.31",
]

[tool.ty.src]
exclude = ["**/*.ipynb"]

[tool.ty.environment]
python = ".venv"

[dependency-groups]
dev = [
    "nbstripout>=0.9.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
